@@ -3237,7 +3237,7 @@ ac) AT90S1200, AT90S2313, AT90S2323, AT90S233, AT90S2343, AT90S4414,
     ATTINY2313, ATTINY2313A, ATTINY4313,
     ATMEGA48, ATMEGA8, ATMEGA8515, ATMEGA8535, ATMEGA88,
     ATMEGA8U2, ATMEGA16U2, ATMEGA32U2, ATMEGA16U4, ATMEGA32U4,
-    ATMEGA32U6, AT90USB646, AT90USB647, AT90USB1286, AT90USB1287,
+    ATMEGA32U6, AT90USB646, AT90USB647, AT90USB1286, AT90USB1287, AT43USB355,
     ATMEGA16, ATMEGA161, ATMEGA162, ATMEGA163, ATMEGA164, ATMEGA165,
     ATMEGA168, ATMEGA169, ATMEGA32, ATMEGA323, ATMEGA324, ATMEGA325,
     ATMEGA3250, ATMEGA328, ATMEGA329, ATMEGA3290, ATMEGA406, ATMEGA64,
