@@ -58,6 +58,9 @@ _bit___label__	 bit	 reg.pos
 		case	"AT90S8535"
 		  include "avr/reg8535.inc"
 
+		case	"AT43USB355"
+		  include "avr/regu355.inc"
+
 		case	"AT90USB646"
 		  include "avr/regu646.inc"
 
@@ -312,7 +315,7 @@ _bit___label__	 bit	 reg.pos
 
 		elsecase
 		  error  "wrong processor type set: only AT90S1200, AT90S2313, AT90S4414, AT90S4433, AT90S4434, AT90S8515, AT90C8534, AT90S8535,"
-		  error  "AT90USB646, AT90USB647, AT90USB1286, AT90USB1287,"
+		  error  "AT90USB646, AT90USB647, AT90USB1286, AT90USB1287, AT90USB355,"
 		  error	 "ATTINY13(A), ATTINY26, ATTINY2313(A), ATTINY4313, ATTINY24(A), ATTINY44(A), ATTINY84(A), ATTINY25, ATTINY45, ATTINY85,"
 		  error	 "ATTINY261(A), ATTINY461(A), ATTINY861(A), ATTINY48, ATTINY88, ATTINY43U, ATTINY441, ATTINY841, ATTINY828, ATTINY1634,"
 		  error	 "ATTINY87, ATTINY167, ATTINY4, ATTINY5, ATTINY9, ATTINY10, ATTINY20, ATTINY40, ATTINY102, ATTINY104, ATTINY28,"
