@@ -43,8 +43,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-char *Version = "1.42 Beta [Bld 125]";
-char *DebVersion = "1.42bld125-1";
+char *Version = "1.42 Beta [Bld 126]";
+char *DebVersion = "1.42bld126-1";
 LongInt VerNo = 0x142f;
 
 char *InfoMessCopyright = "(C) 1992,2018 Alfred Arnold";
